<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".HomePageActivity">

    <TextView
        android:id="@+id/txt_username_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <TextView
        android:id="@+id/txt_password_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/txt_username_info"
        app:layout_constraintStart_toStartOf="@id/txt_username_info"
        app:layout_constraintEnd_toEndOf="@id/txt_username_info"
        />
    <Button
        android:id="@+id/btn_view_employee_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_info"
        app:layout_constraintStart_toStartOf="@+id/txt_username_info"
        app:layout_constraintEnd_toEndOf="@+id/txt_username_info"
        android:textSize="30sp"
        android:text="@string/btn_view_employee_list"/>
</androidx.constraintlayout.widget.ConstraintLayout>